src/test/ui/const-generics/issues/issue-61935.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-61935.rs:9:14
   |
LL |         Self:FooImpl<{N==0}>
   |              ^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

